--- a/crypto/btc-to-eur/index.html
+++ b/crypto/btc-to-eur/index.html
@@ -73,7 +73,7 @@
                         <th>Buy Date</th>
                         <th>Sell Date</th>
                         <th>Profit/Loss (EUR)</th>
-                        <th>Details</th>
+                        <th></th>
                         <th></th>
                     </tr>
                 </thead>
@@ -99,10 +99,10 @@
         <div class="section">
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
-<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
-<p><a href="/currency/sgd-to-usd" style="color: var(--primary-color); text-decoration: underline;">SGD to USD Rate</a></p>
+                <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
+<p><a href="/currency/nzd-to-usd" style="color: var(--primary-color); text-decoration: underline;">NZD to USD Rate</a></p>
                 <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
                         Crypto Converter Hub</a></p>
             </div>
@@ -165,7 +165,7 @@
                 <td><input type="date" class="buy-date" /></td>
                 <td><input type="date" class="sell-date" /></td>
                 <td class="diff" style="font-weight: 600;">-</td>
-                <td><button class="toggle-details-btn" onclick="toggleDetails('${transactionId}')">Details</button></td>
+                <td><button class="toggle-details-btn" onclick="toggleDetails('${transactionId}')">More</button></td>
                 <td><button onclick="removeRow('${transactionId}')" style="background:var(--danger-color); color:white; border:none; border-radius:4px; cursor:pointer; padding:4px 8px;">X</button></td>
             `;
 
@@ -210,7 +210,7 @@
                 btn.textContent = 'Hide';
             } else {
                 detailsRow.style.display = 'none';
-                btn.textContent = 'Details';
+                btn.textContent = 'More';
             }
         }
 
