--- a/currency/aud-to-usd/index.html
+++ b/currency/aud-to-usd/index.html
@@ -147,9 +147,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/cad-to-eur" style="color: var(--primary-color); text-decoration: underline;">CAD to EUR Rate</a></p>
-<p><a href="/currency/usd-to-cad" style="color: var(--primary-color); text-decoration: underline;">USD to CAD Rate</a></p>
-<p><a href="/currency/usd-to-krw" style="color: var(--primary-color); text-decoration: underline;">USD to KRW Rate</a></p>
+                <p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
+<p><a href="/currency/eur-to-jpy" style="color: var(--primary-color); text-decoration: underline;">EUR to JPY Rate</a></p>
+<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
 <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
