--- a/currency/eur-to-sek/index.html
+++ b/currency/eur-to-sek/index.html
@@ -147,9 +147,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-aud" style="color: var(--primary-color); text-decoration: underline;">USD to AUD Rate</a></p>
-<p><a href="/currency/hkd-to-usd" style="color: var(--primary-color); text-decoration: underline;">HKD to USD Rate</a></p>
-<p><a href="/currency/eur-to-cad" style="color: var(--primary-color); text-decoration: underline;">EUR to CAD Rate</a></p>
+                <p><a href="/currency/usd-to-zar" style="color: var(--primary-color); text-decoration: underline;">USD to ZAR Rate</a></p>
+<p><a href="/currency/eur-to-nok" style="color: var(--primary-color); text-decoration: underline;">EUR to NOK Rate</a></p>
+<p><a href="/currency/usd-to-cad" style="color: var(--primary-color); text-decoration: underline;">USD to CAD Rate</a></p>
 <p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
