--- a/currency/gbp-to-eur/index.html
+++ b/currency/gbp-to-eur/index.html
@@ -147,10 +147,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-hkd" style="color: var(--primary-color); text-decoration: underline;">USD to HKD Rate</a></p>
-<p><a href="/currency/usd-to-sgd" style="color: var(--primary-color); text-decoration: underline;">USD to SGD Rate</a></p>
-<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+                <p><a href="/currency/eur-to-nok" style="color: var(--primary-color); text-decoration: underline;">EUR to NOK Rate</a></p>
+<p><a href="/currency/eur-to-aud" style="color: var(--primary-color); text-decoration: underline;">EUR to AUD Rate</a></p>
+<p><a href="/currency/jpy-to-usd" style="color: var(--primary-color); text-decoration: underline;">JPY to USD Rate</a></p>
+<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
