--- a/time-zone/gmt-to-ist/index.html
+++ b/time-zone/gmt-to-ist/index.html
@@ -117,9 +117,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/pst-to-ist" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to India Standard Time (IST)</a></p>
+                <p><a href="/time-zone/aet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Pacific Time (PT)</a></p>
 <p><a href="/time-zone/jst-to-est" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Eastern Time (ET)</a></p>
-<p><a href="/time-zone/ct-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Central Time (CT) to London (GMT/BST)</a></p>
+<p><a href="/time-zone/pst-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to London (GMT/BST)</a></p>
 <p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
