--- a/time-zone/sgt-to-pst/index.html
+++ b/time-zone/sgt-to-pst/index.html
@@ -117,10 +117,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/pst-to-est" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to Eastern Time (ET)</a></p>
-<p><a href="/time-zone/gmt-to-ist" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to India Standard Time (IST)</a></p>
-<p><a href="/time-zone/cet-to-cst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to China Standard Time (CST)</a></p>
-<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
+                <p><a href="/time-zone/cst-to-est" style="color: var(--primary-color); text-decoration: underline;">China Standard Time (CST) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/ct-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Central Time (CT) to London (GMT/BST)</a></p>
+<p><a href="/time-zone/gst-to-est" style="color: var(--primary-color); text-decoration: underline;">Gulf Standard Time (GST) to Eastern Time (ET)</a></p>
+<p><a href="/time-code/convert-pdt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Pacific Daylight Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
