feat(ads): define physical ad slot zones as html comments pre-approval

--- a/currency/dkk-to-eur/index.html
+++ b/currency/dkk-to-eur/index.html
@@ -99,6 +99,8 @@
             <div id="lastUpdated" style="margin-top: 12px; font-size: 0.95rem; color: #555;"></div>
         </div>
 
+        <!-- AD SLOT: tool-content-banner -->
+
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Understanding the DKK to EUR
                 Conversion</h2>
@@ -147,13 +149,15 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/jpy-to-usd" style="color: var(--primary-color); text-decoration: underline;">JPY to USD Rate</a></p>
-<p><a href="/currency/aud-to-usd" style="color: var(--primary-color); text-decoration: underline;">AUD to USD Rate</a></p>
-<p><a href="/currency/usd-to-nok" style="color: var(--primary-color); text-decoration: underline;">USD to NOK Rate</a></p>
+                <p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
+<p><a href="/currency/usd-to-zar" style="color: var(--primary-color); text-decoration: underline;">USD to ZAR Rate</a></p>
+<p><a href="/currency/gbp-to-aud" style="color: var(--primary-color); text-decoration: underline;">GBP to AUD Rate</a></p>
 <p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
+
+            <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
