--- a/scripts/crypto-template.html
+++ b/scripts/crypto-template.html
@@ -106,6 +106,10 @@
         </div>
 
         <div class="section">
+            <!-- AD SLOT: before-faq-banner -->
+
+            <!-- AD SLOT: before-faq-banner -->
+
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
                 <strong>How do I calculate my [FROM_NAME] profit in [TO_NAME]?</strong>
