--- a/scripts/timecode-template.html
+++ b/scripts/timecode-template.html
@@ -91,6 +91,8 @@
             </div>
         </div>
 
+        <!-- AD SLOT: tool-content-banner -->
+
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Smart [NAME] Translator</h2>
             <p style="text-align: left; margin-bottom: 24px;">Stop struggling with manual time zone math. The Toolsified
@@ -105,6 +107,8 @@
                 <p><a href="/time-code" style="color: var(--primary-color); text-decoration: underline;">Back to
                         Time-code Translator Hub</a></p>
             </div>
+
+            <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
