--- a/scripts/timezone-template.html
+++ b/scripts/timezone-template.html
@@ -93,6 +93,8 @@
             </div>
         </div>
 
+        <!-- AD SLOT: tool-content-banner -->
+
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Understanding the [FROM_NAME] to [TO_NAME] Conversion
             </h2>
@@ -102,6 +104,8 @@
                 accounting for complex global Daylight Saving Time (DST) shift rules. Simply select a date and time in
                 the <strong>[FROM_NAME]</strong> input above, and the tool will immediately output the corresponding
                 local time in <strong>[TO_NAME]</strong>.</p>
+
+            <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
