--- a/time-code/convert-gmt-to-local-time/index.html
+++ b/time-code/convert-gmt-to-local-time/index.html
@@ -91,6 +91,8 @@
             </div>
         </div>
 
+        <!-- AD SLOT: tool-content-banner -->
+
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Smart Greenwich Mean Time Translator</h2>
             <p style="text-align: left; margin-bottom: 24px;">Stop struggling with manual time zone math. The Toolsified
@@ -101,13 +103,15 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Time Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
+                <p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
+<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
 <p><a href="/time-code/convert-pdt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Pacific Daylight Time to Local</a></p>
-<p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
-<p><a href="/time-zone/pst-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to London (GMT/BST)</a></p>
+<p><a href="/time-zone/cet-to-cst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to China Standard Time (CST)</a></p>
                 <p><a href="/time-code" style="color: var(--primary-color); text-decoration: underline;">Back to
                         Time-code Translator Hub</a></p>
             </div>
+
+            <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
