--- a/crypto/eth-to-usd/index.html
+++ b/crypto/eth-to-usd/index.html
@@ -100,15 +100,19 @@
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
                 <p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
-<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
-<p><a href="/currency/eur-to-chf" style="color: var(--primary-color); text-decoration: underline;">EUR to CHF Rate</a></p>
+<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
                 <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
                         Crypto Converter Hub</a></p>
             </div>
         </div>
 
         <div class="section">
+            <!-- AD SLOT: before-faq-banner -->
+
+            <!-- AD SLOT: before-faq-banner -->
+
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
                 <strong>How do I calculate my Ethereum profit in US Dollars?</strong>
