--- a/currency.html
+++ b/currency.html
@@ -105,6 +105,8 @@
       <div id="lastUpdated" style="margin-top: 12px; font-size: 0.95rem; color: #555;"></div>
     </div>
 
+    <!-- AD SLOT: tool-content-banner -->
+
     <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
       <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Fast, Accurate Currency Conversion</h2>
       <p style="text-align: left; margin-bottom: 24px;">Convert between US Dollars, Euros, Norwegian Kroner, and dozens
@@ -153,6 +155,8 @@
         <a href="/currency/eur-to-gbp" style="color: var(--primary-color); text-decoration: underline;">EUR to GBP</a>
         <a href="/currency/usd-to-inr" style="color: var(--primary-color); text-decoration: underline;">USD to INR</a>
       </div>
+
+      <!-- AD SLOT: before-faq-banner -->
 
       <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
       <div class="faq-item" style="margin-bottom: 16px;">
