--- a/currency/cad-to-usd/index.html
+++ b/currency/cad-to-usd/index.html
@@ -99,6 +99,8 @@
             <div id="lastUpdated" style="margin-top: 12px; font-size: 0.95rem; color: #555;"></div>
         </div>
 
+        <!-- AD SLOT: tool-content-banner -->
+
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Understanding the CAD to USD
                 Conversion</h2>
@@ -147,13 +149,15 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
-<p><a href="/currency/sgd-to-usd" style="color: var(--primary-color); text-decoration: underline;">SGD to USD Rate</a></p>
+                <p><a href="/currency/usd-to-aud" style="color: var(--primary-color); text-decoration: underline;">USD to AUD Rate</a></p>
 <p><a href="/currency/nzd-to-usd" style="color: var(--primary-color); text-decoration: underline;">NZD to USD Rate</a></p>
-<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
+<p><a href="/currency/usd-to-nok" style="color: var(--primary-color); text-decoration: underline;">USD to NOK Rate</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
+
+            <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
