--- a/currency/nok-to-eur/index.html
+++ b/currency/nok-to-eur/index.html
@@ -99,6 +99,8 @@
             <div id="lastUpdated" style="margin-top: 12px; font-size: 0.95rem; color: #555;"></div>
         </div>
 
+        <!-- AD SLOT: tool-content-banner -->
+
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Understanding the NOK to EUR
                 Conversion</h2>
@@ -147,13 +149,15 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/eur-to-gbp" style="color: var(--primary-color); text-decoration: underline;">EUR to GBP Rate</a></p>
-<p><a href="/currency/usd-to-gbp" style="color: var(--primary-color); text-decoration: underline;">USD to GBP Rate</a></p>
-<p><a href="/currency/hkd-to-usd" style="color: var(--primary-color); text-decoration: underline;">HKD to USD Rate</a></p>
-<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
+                <p><a href="/currency/cad-to-usd" style="color: var(--primary-color); text-decoration: underline;">CAD to USD Rate</a></p>
+<p><a href="/currency/chf-to-eur" style="color: var(--primary-color); text-decoration: underline;">CHF to EUR Rate</a></p>
+<p><a href="/currency/usd-to-inr" style="color: var(--primary-color); text-decoration: underline;">USD to INR Rate</a></p>
+<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
+
+            <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
