--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -113,6 +113,8 @@
         <div id="matrixWrapper" style="overflow-x: auto; display:none;"></div>
       </div>
 
+      <!-- AD SLOT: tool-content-banner -->
+
       <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
         <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Global Time Zone Comparison</h2>
         <p style="text-align: left; margin-bottom: 24px;">Comparing schedules across the world has never been easier.
@@ -167,6 +169,8 @@
           <a href="/time-zone/est-to-ist" style="color: var(--primary-color); text-decoration: underline;">EST to
             IST</a>
         </div>
+
+        <!-- AD SLOT: before-faq-banner -->
 
         <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
         <div class="faq-item" style="margin-bottom: 16px;">
