--- a/scripts/currency-template.html
+++ b/scripts/currency-template.html
@@ -99,6 +99,8 @@
             <div id="lastUpdated" style="margin-top: 12px; font-size: 0.95rem; color: #555;"></div>
         </div>
 
+        <!-- AD SLOT: tool-content-banner -->
+
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Understanding the [FROM_TICKER] to [TO_TICKER]
                 Conversion</h2>
@@ -151,6 +153,8 @@
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
+
+            <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
