--- a/time-code.html
+++ b/time-code.html
@@ -96,6 +96,8 @@
       </div>
     </div>
 
+    <!-- AD SLOT: tool-content-banner -->
+
     <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
       <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Smart Time-Code Translation</h2>
       <p style="text-align: left; margin-bottom: 24px;">Stop struggling with manual time zone math. The Toolsified
@@ -146,6 +148,8 @@
         <a href="/time-code/convert-bst-to-local-time"
           style="color: var(--primary-color); text-decoration: underline;">BST to Local Time</a>
       </div>
+
+      <!-- AD SLOT: before-faq-banner -->
 
       <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
       <div class="faq-item" style="margin-bottom: 16px;">
