--- a/time-zone/est-to-ist/index.html
+++ b/time-zone/est-to-ist/index.html
@@ -93,6 +93,8 @@
             </div>
         </div>
 
+        <!-- AD SLOT: tool-content-banner -->
+
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Understanding the Eastern Time (ET) to India Standard Time (IST) Conversion
             </h2>
@@ -102,6 +104,8 @@
                 accounting for complex global Daylight Saving Time (DST) shift rules. Simply select a date and time in
                 the <strong>Eastern Time (ET)</strong> input above, and the tool will immediately output the corresponding
                 local time in <strong>India Standard Time (IST)</strong>.</p>
+
+            <!-- AD SLOT: before-faq-banner -->
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
             <div class="faq-item" style="margin-bottom: 16px;">
@@ -118,9 +122,9 @@
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
                 <p><a href="/time-zone/aet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Pacific Time (PT)</a></p>
-<p><a href="/time-zone/cst-to-est" style="color: var(--primary-color); text-decoration: underline;">China Standard Time (CST) to Eastern Time (ET)</a></p>
-<p><a href="/time-zone/gst-to-est" style="color: var(--primary-color); text-decoration: underline;">Gulf Standard Time (GST) to Eastern Time (ET)</a></p>
-<p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
+<p><a href="/time-zone/gmt-to-ist" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to India Standard Time (IST)</a></p>
+<p><a href="/time-zone/pst-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to London (GMT/BST)</a></p>
+<p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
