--- a/time-code/convert-gmt-to-local-time/index.html
+++ b/time-code/convert-gmt-to-local-time/index.html
@@ -103,10 +103,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Time Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
-<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
-<p><a href="/time-code/convert-pdt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Pacific Daylight Time to Local</a></p>
-<p><a href="/time-zone/cet-to-cst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to China Standard Time (CST)</a></p>
+                <p><a href="/time-code/convert-pdt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Pacific Daylight Time to Local</a></p>
+<p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
+<p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
+<p><a href="/time-zone/aet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Pacific Time (PT)</a></p>
                 <p><a href="/time-code" style="color: var(--primary-color); text-decoration: underline;">Back to
                         Time-code Translator Hub</a></p>
             </div>
@@ -129,7 +129,7 @@
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
         <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2025 Toolsified. Smart tools for everyday tasks.</p>
+            <p style="margin-bottom: 12px;">© 2026 Toolsified. Smart tools for everyday tasks.</p>
             <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
                 <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
                 <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
