--- a/crypto/btc-to-eur/index.html
+++ b/crypto/btc-to-eur/index.html
@@ -99,10 +99,10 @@
         <div class="section">
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+                <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
 <p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
-<p><a href="/currency/nok-to-eur" style="color: var(--primary-color); text-decoration: underline;">NOK to EUR Rate</a></p>
+<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
+<p><a href="/currency/usd-to-sek" style="color: var(--primary-color); text-decoration: underline;">USD to SEK Rate</a></p>
                 <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
                         Crypto Converter Hub</a></p>
             </div>
@@ -130,7 +130,7 @@
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
         <div class="page-container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2025 Toolsified. Smart tools for everyday tasks.</p>
+            <p style="margin-bottom: 12px;">© 2026 Toolsified. Smart tools for everyday tasks.</p>
             <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
                 <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
                 <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
