--- a/currency/inr-to-usd/index.html
+++ b/currency/inr-to-usd/index.html
@@ -149,9 +149,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-zar" style="color: var(--primary-color); text-decoration: underline;">USD to ZAR Rate</a></p>
-<p><a href="/currency/usd-to-dkk" style="color: var(--primary-color); text-decoration: underline;">USD to DKK Rate</a></p>
-<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
+                <p><a href="/currency/krw-to-usd" style="color: var(--primary-color); text-decoration: underline;">KRW to USD Rate</a></p>
+<p><a href="/currency/usd-to-nzd" style="color: var(--primary-color); text-decoration: underline;">USD to NZD Rate</a></p>
+<p><a href="/currency/gbp-to-cad" style="color: var(--primary-color); text-decoration: underline;">GBP to CAD Rate</a></p>
 <p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
@@ -176,7 +176,7 @@
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
         <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2025 Toolsified. Smart tools for everyday tasks.</p>
+            <p style="margin-bottom: 12px;">© 2026 Toolsified. Smart tools for everyday tasks.</p>
             <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
                 <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
                 <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
