--- a/currency/usd-to-nzd/index.html
+++ b/currency/usd-to-nzd/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/cny-to-usd" style="color: var(--primary-color); text-decoration: underline;">CNY to USD Rate</a></p>
-<p><a href="/currency/dkk-to-usd" style="color: var(--primary-color); text-decoration: underline;">DKK to USD Rate</a></p>
-<p><a href="/currency/usd-to-aud" style="color: var(--primary-color); text-decoration: underline;">USD to AUD Rate</a></p>
-<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
+                <p><a href="/currency/dkk-to-eur" style="color: var(--primary-color); text-decoration: underline;">DKK to EUR Rate</a></p>
+<p><a href="/currency/eur-to-gbp" style="color: var(--primary-color); text-decoration: underline;">EUR to GBP Rate</a></p>
+<p><a href="/currency/aud-to-eur" style="color: var(--primary-color); text-decoration: underline;">AUD to EUR Rate</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
@@ -176,7 +176,7 @@
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
         <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2025 Toolsified. Smart tools for everyday tasks.</p>
+            <p style="margin-bottom: 12px;">© 2026 Toolsified. Smart tools for everyday tasks.</p>
             <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
                 <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
                 <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
