docs: add gdpr, log files, publisher info, and consent to privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -44,6 +44,7 @@
                 <p style="text-align: left;">At Toolsified.com, we respect your privacy and are committed to protecting
                     it. Our tools are designed to work entirely within your browser whenever possible. This Privacy
                     Policy outlines what information we collect, how it is used, and how it is safeguarded.</p>
+                <p style="text-align: left;">Toolsified.com is operated by an independent publisher based in Norway.</p>
 
                 <h2>2. Information Collection and Use</h2>
                 <p style="text-align: left;">Toolsified.com does not require user registration. We do not collect
@@ -70,6 +71,8 @@
                 <p style="text-align: left;">While we strive to use commercially acceptable means to protect information
                     transmitted via our site, remember that no method of transmission over the internet, or method of
                     electronic storage is 100% secure.</p>
+                <p style="text-align: left;">Users located in the European Economic Area (EEA) have the right to request
+                    access to or deletion of personal data where applicable.</p>
 
                 <h2>5. Changes to This Privacy Policy</h2>
                 <p style="text-align: left;">This privacy policy is subject to change. Any changes will be posted on
@@ -78,6 +81,15 @@
                 <h2>6. Contact Us</h2>
                 <p style="text-align: left;">If you have any questions or suggestions about our Privacy Policy, do not
                     hesitate to contact us at <a href="mailto:info@toolsified.com">info@toolsified.com</a>.</p>
+
+                <h2>7. Log Files</h2>
+                <p style="text-align: left;">Like most websites, Toolsified.com uses standard log files. These files may
+                    include IP addresses, browser type, Internet Service Provider (ISP), date/time stamps,
+                    referring/exit pages, and number of clicks. This information is used for security, analytics, and
+                    site maintenance purposes and is not linked to personally identifiable information.</p>
+
+                <p style="text-align: left; margin-top: 24px;"><strong>By using our website, you hereby consent to our
+                        Privacy Policy and agree to its terms.</strong></p>
             </div>
         </div>
     </main>
@@ -85,7 +97,7 @@
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
         <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2025 Toolsified. Smart tools for everyday tasks.</p>
+            <p style="margin-bottom: 12px;">© 2026 Toolsified. Smart tools for everyday tasks.</p>
             <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
                 <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
                 <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
