chore: fix remaining 2025 footer in contact and missed files

--- a/time-zone/mt-to-est/index.html
+++ b/time-zone/mt-to-est/index.html
@@ -61,7 +61,8 @@
     <!-- Main Content -->
     <main class="container">
         <h1 id="page-title">Mountain Time (MT) to Eastern Time (ET) Converter</h1>
-        <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Mountain Time (MT)
+        <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Mountain
+            Time (MT)
             and Eastern Time (ET).</p>
 
         <div class="card" id="applet-container">
@@ -77,7 +78,8 @@
                 <input id="showMatrix" type="checkbox" />
             </div>
 
-            <button onclick="showAll()" class="primary" style="margin-top: 24px;">Calculate Eastern Time (ET) Time</button>
+            <button onclick="showAll()" class="primary" style="margin-top: 24px;">Calculate Eastern Time (ET)
+                Time</button>
 
             <div class="table-container">
                 <table id="resultsTable" style="display:none; width: 100%; margin-top: 24px;">
@@ -94,13 +96,17 @@
         </div>
 
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
-            <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Understanding the Mountain Time (MT) to Eastern Time (ET) Conversion
+            <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Understanding the Mountain Time (MT) to Eastern Time
+                (ET) Conversion
             </h2>
-            <p style="text-align: left; margin-bottom: 24px;">Comparing schedules between <strong>Mountain Time (MT)</strong>
-                and <strong>Eastern Time (ET)</strong> is critical for coordinating international meetings, remote work, and
+            <p style="text-align: left; margin-bottom: 24px;">Comparing schedules between <strong>Mountain Time
+                    (MT)</strong>
+                and <strong>Eastern Time (ET)</strong> is critical for coordinating international meetings, remote work,
+                and
                 travel plans. Our hyper-accurate time zone converter instantly calculates the exact time difference,
                 accounting for complex global Daylight Saving Time (DST) shift rules. Simply select a date and time in
-                the <strong>Mountain Time (MT)</strong> input above, and the tool will immediately output the corresponding
+                the <strong>Mountain Time (MT)</strong> input above, and the tool will immediately output the
+                corresponding
                 local time in <strong>Eastern Time (ET)</strong>.</p>
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
@@ -125,7 +131,7 @@
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
         <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
-            <p style="margin-bottom: 12px;">© 2025 Toolsified. Smart tools for everyday tasks.</p>
+            <p style="margin-bottom: 12px;">© 2026 Toolsified. Smart tools for everyday tasks.</p>
             <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
                 <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
                 <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
