--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,5 @@
 <div class="container" style="text-align: center; margin-top: 48px; font-size: 0.9rem;">
-  <p>© 2025 Toolsified. Smart tools for everyday tasks.</p>
-  <p><a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+  <p>© 2026 Toolsified. Smart tools for everyday tasks.</p>
+  <p><a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a>
+  </p>
 </div>
