content: update homepage copy for better site purpose signal

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <!-- Main Content -->
   <main class="container">
     <h1>Welcome to Toolsified</h1>
-    <p>Smart, fast and free tools – right in your browser. No clutter. No sign-ups.</p>
+    <p>Toolsified provides fast, privacy-friendly online tools for time, currency, and crypto conversions — designed to
+      work instantly in your browser.</p>
 
     <div class="tool-list">
       <a href="/time-code" class="tool">🕒 Time-code Converter</a>
