style: fix crypto landing page layout consistency

--- a/crypto.html
+++ b/crypto.html
@@ -57,31 +57,42 @@
     </div>
   </header>
 
-  <main class="page-container" style="padding-top: 48px; padding-bottom: 48px;">
-    <h1>Smart Crypto Converter</h1>
+  <main class="container">
+    <h1 style="text-align: center; margin-bottom: 8px;">Smart Crypto Converter</h1>
     <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate Bitcoin & Ethereum gains instantly
       using historical prices. No account required.</p>
 
-    <!-- Tool Section -->
-    <div class="table-container card" style="margin-top: 0;">
-      <table class="table" id="cryptoTable">
-        <thead>
-          <tr>
-            <th>Amount</th>
-            <th>Crypto</th>
-            <th>Fiat</th>
-            <th>Buy Date</th>
-            <th>Sell Date</th>
-            <th>Profit/Loss</th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-      <div class="row-controls" style="margin-top: 1rem; display: flex; gap: 1rem; padding: 0 1rem 1rem 1rem;">
+    <div class="card" style="margin-top: 0; padding: 24px;">
+      <div class="table-container" style="margin-top: 0; box-shadow: none; padding: 0;">
+        <table class="table" id="cryptoTable">
+          <thead>
+            <tr>
+              <th>Amount</th>
+              <th>Crypto</th>
+              <th>Fiat</th>
+              <th>Buy Date</th>
+              <th>Sell Date</th>
+              <th>Profit/Loss</th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+      <div class="row-controls" style="margin-top: 1rem; display: flex; gap: 1rem;">
         <button onclick="addRow()" class="primary" style="margin-top: 0; width: auto;">+ Add Transaction</button>
       </div>
+    </div>
+
+    <!-- AD SLOT: before-faq-banner -->
+
+    <div class="section card seo-content" style="padding: 32px; margin-top: 40px;">
+      <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Fast, Accurate Crypto Tracking</h3>
+      <p style="text-align: left; margin-bottom: 24px;">Convert between Bitcoin, Ethereum, Solana and Fiat instantly.
+        The Toolsified crypto converter uses real-time exchange rate data to ensure you get accurate calculations for
+        your portfolio tracking. Simply enter your amount above, select your base and target currencies, and your
+        buy/sell dates to get your exact profit or loss without any hidden fees or complicated menus.</p>
     </div>
 
     <!-- Content Sections -->
