--- a/crypto/sol-to-usd/index.html
+++ b/crypto/sol-to-usd/index.html
@@ -58,34 +58,37 @@
         </div>
     </header>
 
-    <main class="page-container" style="padding-top: 48px; padding-bottom: 48px;">
-        <h1>Solana to US Dollars Historical Profit & Loss Calculator</h1>
+    <main class="container">
+        <h1 style="text-align: center; margin-bottom: 8px;">Solana to US Dollars Historical Profit & Loss Calculator
+        </h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate historic profit and loss for
             SOL to USD.</p>
 
-        <div class="table-container card" style="margin-top: 0;">
-            <table class="table" id="cryptoTable">
-                <thead>
-                    <tr>
-                        <th>Amount</th>
-                        <th>Crypto</th>
-                        <th>Fiat</th>
-                        <th>Buy Date</th>
-                        <th>Sell Date</th>
-                        <th>Profit/Loss (USD)</th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-            <div class="row-controls" style="margin-top: 1rem; display: flex; gap: 1rem; padding: 0 1rem 1rem 1rem;">
+        <div class="card" style="margin-top: 0; padding: 24px;">
+            <div class="table-container" style="margin-top: 0; box-shadow: none; padding: 0;">
+                <table class="table" id="cryptoTable">
+                    <thead>
+                        <tr>
+                            <th>Amount</th>
+                            <th>Crypto</th>
+                            <th>Fiat</th>
+                            <th>Buy Date</th>
+                            <th>Sell Date</th>
+                            <th>Profit/Loss (USD)</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+            <div class="row-controls" style="margin-top: 1rem; display: flex; gap: 1rem;">
                 <button onclick="addRow()" class="primary" style="margin-top: 0; width: auto;">+ Add
                     Transaction</button>
             </div>
         </div>
 
-        <div class="section">
+        <div class="section card seo-content" style="padding: 32px; margin-top: 40px;">
             <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Analyze Solana ROI in US Dollars</h2>
             <p style="text-align: left; margin-bottom: 24px;">Use the Toolsified <strong>Solana to
                     US Dollars</strong> historical profit and loss calculator to analyze your investment performance.
@@ -94,37 +97,36 @@
                 data. Simply enter your transaction dates and amounts above to see your net results instantly. Our tool
                 functions entirely within your browser, ensuring your <strong>SOL</strong> financial data
                 remains private and secure.</p>
-        </div>
 
-        <div class="section">
-            <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
-            <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
-<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+            <div class="section">
+                <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
+                <div class="internal-links-cluster" style="margin-bottom: 32px;">
+                    <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
 <p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
-<p><a href="/currency/usd-to-gbp" style="color: var(--primary-color); text-decoration: underline;">USD to GBP Rate</a></p>
-                <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
-                        Crypto Converter Hub</a></p>
+<p><a href="/currency/gbp-to-aud" style="color: var(--primary-color); text-decoration: underline;">GBP to AUD Rate</a></p>
+                    <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
+                            Crypto Converter Hub</a></p>
+                </div>
             </div>
-        </div>
 
-        <div class="section">
-            <!-- AD SLOT: before-faq-banner -->
+            <div class="section">
+                <!-- AD SLOT: before-faq-banner -->
 
-            <!-- AD SLOT: before-faq-banner -->
-
-            <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
-            <div class="faq-item" style="margin-bottom: 16px;">
-                <strong>How do I calculate my Solana profit in US Dollars?</strong>
-                <p style="text-align: left; margin-bottom: 0;">Enter your SOL amount and transaction dates.
-                    The tool uses real historic exchange rates to calculate your profit or loss in USD.</p>
+                <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
+                <div class="faq-item" style="margin-bottom: 16px;">
+                    <strong>How do I calculate my Solana profit in US Dollars?</strong>
+                    <p style="text-align: left; margin-bottom: 0;">Enter your SOL amount and transaction
+                        dates.
+                        The tool uses real historic exchange rates to calculate your profit or loss in USD.</p>
+                </div>
+                <div class="faq-item" style="margin-bottom: 16px;">
+                    <strong>Is my SOL portfolio data secure?</strong>
+                    <p style="text-align: left; margin-bottom: 0;">Yes. All calculations happen instantly in your
+                        browser
+                        session and your data is never saved or transmitted to our servers.</p>
+                </div>
             </div>
-            <div class="faq-item" style="margin-bottom: 16px;">
-                <strong>Is my SOL portfolio data secure?</strong>
-                <p style="text-align: left; margin-bottom: 0;">Yes. All calculations happen instantly in your browser
-                    session and your data is never saved or transmitted to our servers.</p>
-            </div>
-        </div>
     </main>
 
     <!-- Footer -->
