--- a/currency/cny-to-usd/index.html
+++ b/currency/cny-to-usd/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-inr" style="color: var(--primary-color); text-decoration: underline;">USD to INR Rate</a></p>
-<p><a href="/currency/chf-to-usd" style="color: var(--primary-color); text-decoration: underline;">CHF to USD Rate</a></p>
-<p><a href="/currency/eur-to-usd" style="color: var(--primary-color); text-decoration: underline;">EUR to USD Rate</a></p>
-<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
+                <p><a href="/currency/usd-to-zar" style="color: var(--primary-color); text-decoration: underline;">USD to ZAR Rate</a></p>
+<p><a href="/currency/nok-to-usd" style="color: var(--primary-color); text-decoration: underline;">NOK to USD Rate</a></p>
+<p><a href="/currency/usd-to-inr" style="color: var(--primary-color); text-decoration: underline;">USD to INR Rate</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
