--- a/currency/eur-to-gbp/index.html
+++ b/currency/eur-to-gbp/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/gbp-to-aud" style="color: var(--primary-color); text-decoration: underline;">GBP to AUD Rate</a></p>
-<p><a href="/currency/sgd-to-usd" style="color: var(--primary-color); text-decoration: underline;">SGD to USD Rate</a></p>
-<p><a href="/currency/usd-to-gbp" style="color: var(--primary-color); text-decoration: underline;">USD to GBP Rate</a></p>
-<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
+                <p><a href="/currency/usd-to-gbp" style="color: var(--primary-color); text-decoration: underline;">USD to GBP Rate</a></p>
+<p><a href="/currency/eur-to-nok" style="color: var(--primary-color); text-decoration: underline;">EUR to NOK Rate</a></p>
+<p><a href="/currency/aud-to-eur" style="color: var(--primary-color); text-decoration: underline;">AUD to EUR Rate</a></p>
+<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
