--- a/currency/eur-to-usd/index.html
+++ b/currency/eur-to-usd/index.html
@@ -149,9 +149,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-cny" style="color: var(--primary-color); text-decoration: underline;">USD to CNY Rate</a></p>
-<p><a href="/currency/eur-to-usd" style="color: var(--primary-color); text-decoration: underline;">EUR to USD Rate</a></p>
-<p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
+                <p><a href="/currency/aud-to-gbp" style="color: var(--primary-color); text-decoration: underline;">AUD to GBP Rate</a></p>
+<p><a href="/currency/usd-to-sek" style="color: var(--primary-color); text-decoration: underline;">USD to SEK Rate</a></p>
+<p><a href="/currency/usd-to-hkd" style="color: var(--primary-color); text-decoration: underline;">USD to HKD Rate</a></p>
 <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
