--- a/currency/hkd-to-usd/index.html
+++ b/currency/hkd-to-usd/index.html
@@ -149,9 +149,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-cad" style="color: var(--primary-color); text-decoration: underline;">USD to CAD Rate</a></p>
-<p><a href="/currency/jpy-to-usd" style="color: var(--primary-color); text-decoration: underline;">JPY to USD Rate</a></p>
-<p><a href="/currency/usd-to-chf" style="color: var(--primary-color); text-decoration: underline;">USD to CHF Rate</a></p>
+                <p><a href="/currency/dkk-to-usd" style="color: var(--primary-color); text-decoration: underline;">DKK to USD Rate</a></p>
+<p><a href="/currency/eur-to-sek" style="color: var(--primary-color); text-decoration: underline;">EUR to SEK Rate</a></p>
+<p><a href="/currency/cny-to-usd" style="color: var(--primary-color); text-decoration: underline;">CNY to USD Rate</a></p>
 <p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
