--- a/currency/nok-to-eur/index.html
+++ b/currency/nok-to-eur/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-cny" style="color: var(--primary-color); text-decoration: underline;">USD to CNY Rate</a></p>
-<p><a href="/currency/chf-to-usd" style="color: var(--primary-color); text-decoration: underline;">CHF to USD Rate</a></p>
-<p><a href="/currency/nok-to-eur" style="color: var(--primary-color); text-decoration: underline;">NOK to EUR Rate</a></p>
-<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
+                <p><a href="/currency/eur-to-chf" style="color: var(--primary-color); text-decoration: underline;">EUR to CHF Rate</a></p>
+<p><a href="/currency/usd-to-krw" style="color: var(--primary-color); text-decoration: underline;">USD to KRW Rate</a></p>
+<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
+<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
