--- a/currency/usd-to-gbp/index.html
+++ b/currency/usd-to-gbp/index.html
@@ -149,9 +149,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-cad" style="color: var(--primary-color); text-decoration: underline;">USD to CAD Rate</a></p>
-<p><a href="/currency/usd-to-eur" style="color: var(--primary-color); text-decoration: underline;">USD to EUR Rate</a></p>
-<p><a href="/currency/chf-to-usd" style="color: var(--primary-color); text-decoration: underline;">CHF to USD Rate</a></p>
+                <p><a href="/currency/sgd-to-usd" style="color: var(--primary-color); text-decoration: underline;">SGD to USD Rate</a></p>
+<p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
+<p><a href="/currency/gbp-to-usd" style="color: var(--primary-color); text-decoration: underline;">GBP to USD Rate</a></p>
 <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
