--- a/time-zone/cet-to-pst/index.html
+++ b/time-zone/cet-to-pst/index.html
@@ -122,9 +122,9 @@
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
                 <p><a href="/time-zone/aet-to-est" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Eastern Time (ET)</a></p>
-<p><a href="/time-zone/gst-to-est" style="color: var(--primary-color); text-decoration: underline;">Gulf Standard Time (GST) to Eastern Time (ET)</a></p>
-<p><a href="/time-zone/gmt-to-est" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to Eastern Time (ET)</a></p>
-<p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
+<p><a href="/time-zone/cet-to-est" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/jst-to-pst" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Pacific Time (PT)</a></p>
+<p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
