--- a/time-zone/pst-to-ist/index.html
+++ b/time-zone/pst-to-ist/index.html
@@ -121,10 +121,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/ct-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Central Time (CT) to London (GMT/BST)</a></p>
-<p><a href="/time-zone/cet-to-jst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Japan Standard Time (JST)</a></p>
-<p><a href="/time-zone/cst-to-est" style="color: var(--primary-color); text-decoration: underline;">China Standard Time (CST) to Eastern Time (ET)</a></p>
-<p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
+                <p><a href="/time-zone/cst-to-est" style="color: var(--primary-color); text-decoration: underline;">China Standard Time (CST) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/cet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Pacific Time (PT)</a></p>
+<p><a href="/time-zone/pst-to-est" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to Eastern Time (ET)</a></p>
+<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
